--- a/Frontend/log-in.html
+++ b/Frontend/log-in.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!--<meta name=description content="This site was generated with Anima. www.animaapp.com"/>-->
-    <!-- <link rel="shortcut icon" type=image/png href="https://animaproject.s3.amazonaws.com/home/favicon.png" /> -->
-    <meta name="viewport" content="width=1465, maximum-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
-    <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="css/log-in.css" />
-    <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
-    <link rel="stylesheet" type="text/css" href="css/globals.css" />
-  </head>
-  <body style="margin: 0; background: #afa7a7">
-    <input type="hidden" id="anPageName" name="page" value="log-in" />
-    <div class="container-center-horizontal">
-      <div class="log-in screen">
-        <div class="overlap-group">
-          <img class="rectangle-188" src="img/rectangle-188-7.svg" alt="Rectangle 188" />
-          <div class="form-log-in">
-            <h1 class="title roboto-normal-black-36px">Sign in</h1>
-            <img class="line-26" src="img/line-26.svg" alt="Line 26" />
-            <div class="log-instudentcard log">
-              <div class="flex-row">
-                <div class="sign-in-as-student sign-in-as inter-normal-white-12px">Sign in as Student</div>
-                <img class="vector" src="img/vector.svg" alt="Vector" />
-              </div>
-              <div class="frame-32"></div>
+
+<head>
+  <meta charset="utf-8" />
+  <!--<meta name=description content="This site was generated with Anima. www.animaapp.com"/>-->
+  <!-- <link rel="shortcut icon" type=image/png href="https://animaproject.s3.amazonaws.com/home/favicon.png" /> -->
+  <meta name="viewport" content="width=1465, maximum-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
+  <meta name="og:type" content="website" />
+  <meta name="twitter:card" content="photo" />
+  <link rel="stylesheet" type="text/css" href="Frontend/css/log-in.css" />
+  <link rel="stylesheet" type="text/css" href="Frontend/css/styleguide.css" />
+  <link rel="stylesheet" type="text/css" href="Frontend/css/globals.css" />
+</head>
+
+<body style="margin: 0; background: #afa7a7">
+  <input type="hidden" id="anPageName" name="page" value="log-in" />
+  <div class="container-center-horizontal">
+    <div class="log-in screen">
+      <div class="overlap-group">
+        <img class="rectangle-188" src="img/rectangle-188-7.svg" alt="Rectangle 188" />
+        <div class="form-log-in">
+          <h1 class="title roboto-normal-black-36px">Sign in</h1>
+          <img class="line-26" src="img/line-26.svg" alt="Line 26" />
+          <div class="log-instudentcard log">
+            <div class="flex-row">
+              <div class="sign-in-as-student sign-in-as inter-normal-white-12px">Sign in as Student</div>
+              <img class="vector" src="img/vector.svg" alt="Vector" />
             </div>
-            <div class="log-intutorcard log">
-              <div class="flex-row-1">
-                <div class="sign-in-as-tutor sign-in-as inter-normal-white-12px">Sign in as Tutor</div>
-                <img class="vector" src="img/vector.svg" alt="Vector" />
-              </div>
-              <div class="frame-32"></div>
-            </div>
+            <div class="frame-32"></div>
           </div>
-          <div class="dashbored"></div>
-          <img class="logo" src="img/logo-11@2x.png" alt="logo" />
-          <img class="arrow_back" src="img/arrow-back.svg" alt="arrow_back" />
+          <div class="log-intutorcard log">
+            <div class="flex-row-1">
+              <div class="sign-in-as-tutor sign-in-as inter-normal-white-12px">Sign in as Tutor</div>
+              <img class="vector" src="img/vector.svg" alt="Vector" />
+            </div>
+            <div class="frame-32"></div>
+          </div>
         </div>
+        <div class="dashbored"></div>
+        <img class="logo" src="img/logo-11@2x.png" alt="logo" />
+        <img class="arrow_back" src="img/arrow-back.svg" alt="arrow_back" />
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
