action command for landing page

--- a/Frontend/landing-page.html
+++ b/Frontend/landing-page.html
@@ -23,7 +23,7 @@
           <div class="template">
             <div class="overlap-group-container">
               <div class="overlap-group3">
-                <img class="rectangle-188" src="img/rectangle-188.svg" alt="Rectangle 188" />
+                <img class="rectangle-188" src="/Frontend/img/rectangle-188.svg" alt="Rectangle 188" />
                 <div class="dashbored"></div>
                 <div class="button-1 button-5">
                   <div class="button single-linebody-base">Register</div>
@@ -31,56 +31,46 @@
               </div>
               <div class="overlap-group2">
                 <p class="students-are-taught">
-                  Students are taught by credentialed tutors using proven proven techniques.
+                  Students are taught by credentialed tutors using proven techniques.
                 </p>
               </div>
               <div class="overlap-group1">
-                <img class="rectangle-190" src="img/rectangle-190.svg" alt="Rectangle 190" />
+                <img class="rectangle-190" src="/Frontend/img/rectangle-190.svg" alt="Rectangle 190" />
                 <div class="overlap-group">
                   <div class="menu-fab">
                     <div class="menu"></div>
                     <div class="fab-elevation-override"></div>
                   </div>
-                  <img class="icon" src="img/icon.svg" alt="Icon" />
-                  <img class="notifications" src="img/notifications.svg" alt="notifications" />
+                  <img class="icon" src="/Frontend/img/icon.svg" alt="Icon" />
+                  <img class="notifications" src="/Frontend/img/notifications.svg" alt="notifications" />
                 </div>
-                <img class="image" src="img/image.png" alt="image" />
+                <img class="image" src="/Frontend/img/image.png" alt="image" />
                 <h1 class="together-we-can-mak">Together, we can make learning<br />a rewarding experience</h1>
                 <p class="address">
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact
                   Us At<br /><br />(777)-666-888<br /><br />308 Negra Arroyo Lane<br />Albuquerque , NM 87104
                   <br /><br />nexgentutors@gmail.com
                 </p>
-                <img class="phone" src="img/phone.svg" alt="Phone" />
-                <img class="map-pin" src="img/map-pin.svg" alt="Map pin" />
-                <img class="mail" src="img/mail.svg" alt="Mail" />
+                <img class="phone" src="/Frontend/img/phone.svg" alt="Phone" />
+                <img class="map-pin" src="/Frontend/img/map-pin.svg" alt="Map pin" />
+                <img class="mail" src="/Frontend/img/mail.svg" alt="Mail" />
               </div>
             </div>
           </div>
-          <img class="logo" src="img/logo@2x.png" alt="logo" />
+          <img class="logo" src="/Frontend/img/logo@2x.png" alt="logo" />
           <div class="button-2 button-5">
-            <div class="button single-linebody-base">Log In</div>
+            <a href="?page=login" class="button single-linebody-base">Log In</a>
           </div>
           <div class="button-3 button-5">
-            <div class="button single-linebody-base">Learn More</div>
+            <a href="?page=register" class="button single-linebody-base">Register</a>
           </div>
           <div class="button-4 button-5">
-            <div class="button single-linebody-base">FAQ</div>
+            <a href="?page=faq" class="button single-linebody-base">FAQ</a>
           </div>
         </div>
       </div>
     </div>
-    <<<<<<< HEAD <<<<<<< HEAD </div>
+  </div>
 </body>
 
 </html>
-=======
-</body>
-
-</html>
->>>>>>> origin/main
-=======
-</body>
-
-</html>
->>>>>>> origin/main
