make the login button work

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,9 +9,9 @@
   <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
   <meta name="og:type" content="website" />
   <meta name="twitter:card" content="photo" />
-  <link rel="stylesheet" type="text/css" href="/Frontend/css/landing-page.css" />
-  <link rel="stylesheet" type="text/css" href="/Frontend/css/styleguide.css" />
-  <link rel="stylesheet" type="text/css" href="/Frontend/css/globals.css" />
+  <link rel="stylesheet" type="text/css" href="css/landing-page.css" />
+  <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
+  <link rel="stylesheet" type="text/css" href="css/globals.css" />
 </head>
 
 <body style="margin: 0">
@@ -59,8 +59,8 @@
           </div>
           <img class="logo" src="img/logo@2x.png" alt="logo" />
           <div class="button-2 button-5">
-            <div class="button single-linebody-base">Log In</div>
-          </div>
+            <a href="combined_login_register.php" class="button single-linebody-base" style="text-decoration: none; color: inherit;">Log In</a>
+          </div>          
           <div class="button-3 button-5">
             <div class="button single-linebody-base">Learn More</div>
           </div>
