--- a/Frontend/log-in.html
+++ b/Frontend/log-in.html
@@ -9,9 +9,9 @@
   <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
   <meta name="og:type" content="website" />
   <meta name="twitter:card" content="photo" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/log-in.css" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/styleguide.css" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/globals.css" />
+  <link rel="stylesheet" type="text/css" href="css/log-in.css" />
+  <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
+  <link rel="stylesheet" type="text/css" href="css/globals.css" />
 </head>
 
 <body style="margin: 0; background: #afa7a7">
