--- a/Frontend/performance-tracking-johnny.html
+++ b/Frontend/performance-tracking-johnny.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
   </head>
   <body style="margin: 0; background: #ffffff">
+    <form action="Backend/includes/studentData.php" method="POST">
     <input type="hidden" id="anPageName" name="page" value="performance-tracking-johnny" />
     <div class="container-center-horizontal">
       <div class="performance-tracking-johnny screen">
@@ -462,5 +463,6 @@
         </div>
       </div>
     </div>
+  </form>
   </body>
 </html>
