Done with login,registraiont, landingpage buttons

--- a/Frontend/landing-page.html
+++ b/Frontend/landing-page.html
@@ -26,7 +26,7 @@
                 <img class="rectangle-188" src="/Frontend/img/rectangle-188.svg" alt="Rectangle 188" />
                 <div class="dashbored"></div>
                 <div class="button-1 button-5">
-                  <div class="button single-linebody-base">Register</div>
+                  <a href="/Frontend/registration-page.html" class="button single-linebody-base">Register</a>
                 </div>
               </div>
               <div class="overlap-group2">
@@ -59,10 +59,10 @@
           </div>
           <img class="logo" src="/Frontend/img/logo@2x.png" alt="logo" />
           <div class="button-2 button-5">
-            <a href="?page=login" class="button single-linebody-base">Log In</a>
+            <a href="/Frontend/log-in.html" class="button single-linebody-base">Log In</a>
           </div>
           <div class="button-3 button-5">
-            <a href="?page=register" class="button single-linebody-base">Register</a>
+            <a href="/Frontend/registration-page.html" class="button single-linebody-base">Learn More</a>
           </div>
           <div class="button-4 button-5">
             <a href="?page=faq" class="button single-linebody-base">FAQ</a>
