--- a/Frontend/student-dashboard.html
+++ b/Frontend/student-dashboard.html
@@ -9,9 +9,9 @@
   <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
   <meta name="og:type" content="website" />
   <meta name="twitter:card" content="photo" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/student-dashboard.css" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/styleguide.css" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/globals.css" />
+  <link rel="stylesheet" type="text/css" href="/Frontend/css/student-dashboard.css" />
+  <link rel="stylesheet" type="text/css" href="/Frontend/css/styleguide.css" />
+  <link rel="stylesheet" type="text/css" href="/Frontend/css/globals.css" />
 </head>
 
 <body style="margin: 0">
@@ -19,41 +19,42 @@
   <div class="container-center-horizontal">
     <div class="student-dashboard screen">
       <div class="overlap-group5">
-        <img class="template" src="img/template-1.svg" alt="Template" />
+        <img class="template" src="/Frontend/img/template-1.svg" alt="Template" />
         <div class="group-24">
           <div class="overlap-group2">
             <div class="dashbored"></div>
             <div class="number inter-black-black-24px">4</div>
             <div class="my-tutors inter-extra-light-black-16px">My Tutors</div>
-            <img class="gmail_groups" src="img/gmail-groups-2.svg" alt="gmail_groups" />
+            <img class="gmail_groups" src="/Frontend/img/gmail-groups-2.svg" alt="gmail_groups" />
           </div>
           <div class="overlap-group1">
             <div class="dashbored"></div>
             <div class="number-1 number-3 inter-black-black-24px">20</div>
             <div class="new-message inter-extra-light-black-16px">New Message</div>
-            <img class="mail" src="img/mail-3.svg" alt="mail" />
+            <img class="mail" src="/Frontend/img/mail-3.svg" alt="mail" />
           </div>
           <div class="overlap-group">
             <div class="dashbored"></div>
             <h1 class="address inter-black-black-24px">30 Hr</h1>
             <div class="weekly-hour inter-extra-light-black-16px">Weekly Hour</div>
-            <img class="circular-determinate-progress-indicator" src="img/circular-determinate-progress-indicator-1.svg"
+            <img class="circular-determinate-progress-indicator"
+              src="/Frontend/img/circular-determinate-progress-indicator-1.svg"
               alt="circular-determinate progress indicator" />
             <div class="number-2 number-3">23</div>
           </div>
         </div>
         <div class="overlap-group3 inter-black-black-24px">
           <div class="dashbored-1">
-            <img class="icon" src="img/icon-228.png" alt="icon" />
+            <img class="icon" src="/Frontend/img/icon-228.png" alt="icon" />
             <div class="dashbored-2"></div>
           </div>
           <div class="classes">Classes</div>
-          <img class="dashbored-3" src="img/dashbored-4.svg" alt="dashbored" />
+          <img class="dashbored-3" src="/Frontend/img/dashbored-4.svg" alt="dashbored" />
           <div class="dashbored-4"></div>
           <div class="dashbored-5"></div>
-          <img class="dashbored-6" src="img/dashbored-5.svg" alt="dashbored" />
+          <img class="dashbored-6" src="/Frontend/img/dashbored-5.svg" alt="dashbored" />
           <div class="dashbored-7"></div>
-          <img class="dashbored-8" src="img/dashbored-6.svg" alt="dashbored" />
+          <img class="dashbored-8" src="/Frontend/img/dashbored-6.svg" alt="dashbored" />
           <div class="assembly">Assembly</div>
           <div class="biology">Biology</div>
           <div class="chemistry">Chemistry</div>
@@ -66,19 +67,20 @@
           <div class="dashbored-9"></div>
           <div class="completed-meetings">completed meetings</div>
           <p class="x10-24-physics-at-11pm-tutor-adem-h">10/ 24 Physics at 11pm, Tutor: Adem H</p>
-          <img class="x1021-biology-1030am-tutor-emily-c" src="img/10-21-biology-10-30am--tutor--emily-c-1.png"
+          <img class="x1021-biology-1030am-tutor-emily-c"
+            src="/Frontend/img/10-21-biology-10-30am--tutor--emily-c-1.png"
             alt="10/21 Biology 10:30am, Tutor: Emily C" />
-          <img class="corner-down-right" src="img/corner-down-right-3.svg" alt="Corner down-right" />
-          <img class="corner-down-right-1 corner-down-right-3" src="img/corner-down-right-3.svg"
+          <img class="corner-down-right" src="/Frontend/img/corner-down-right-3.svg" alt="Corner down-right" />
+          <img class="corner-down-right-1 corner-down-right-3" src="/Frontend/img/corner-down-right-3.svg"
             alt="Corner down-right" />
           <p class="x111-algebra-at-9pm-tutor-lily-k">11/1 Algebra at 9pm, Tutor: Lily K</p>
-          <img class="corner-down-right-2 corner-down-right-3" src="img/corner-down-right-5.svg"
+          <img class="corner-down-right-2 corner-down-right-3" src="/Frontend/img/corner-down-right-5.svg"
             alt="Corner down-right" />
-          <img class="rectangle-175" src="img/rectangle-175-1.svg" alt="Rectangle 175" />
+          <img class="rectangle-175" src="/Frontend/img/rectangle-175-1.svg" alt="Rectangle 175" />
           <div class="upcoming-meetings">Upcoming meetings</div>
-          <img class="icon-1" src="img/icon-229.svg" alt="icon" />
+          <img class="icon-1" src="/Frontend/img/icon-229.svg" alt="icon" />
           <div class="see-more">see more</div>
-          <img class="icon-2" src="img/icon-230.svg" alt="icon" />
+          <img class="icon-2" src="/Frontend/img/icon-230.svg" alt="icon" />
         </div>
       </div>
     </div>
