--- a/Frontend/tutor-dashboard.html
+++ b/Frontend/tutor-dashboard.html
@@ -9,9 +9,9 @@
   <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
   <meta name="og:type" content="website" />
   <meta name="twitter:card" content="photo" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/tutor-dashboard.css" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/styleguide.css" />
-  <link rel="stylesheet" type="text/css" href="Frontend/css/globals.css" />
+  <link rel="stylesheet" type="text/css" href="/Frontend/css/tutor-dashboard.css" />
+  <link rel="stylesheet" type="text/css" href="/Frontend/css/styleguide.css" />
+  <link rel="stylesheet" type="text/css" href="/Frontend/css/globals.css" />
 </head>
 
 <body style="margin: 0">
@@ -21,36 +21,36 @@
       <div class="overlap-group8 inter-semi-bold-black-18px">
         <div class="template">
           <div class="overlap-group2">
-            <img class="group-15" src="img/group-15.png" alt="Group 15" />
+            <img class="group-15" src="/Frontend/img/group-15.png" alt="Group 15" />
             <div class="overlap-group">
               <div class="bottom-app-bar">
                 <div class="leading-icon">
                   <div class="icon-1">
                     <div class="container">
-                      <div class="state-layer"><img class="icon" src="img/icon-231.svg" alt="Icon" /></div>
+                      <div class="state-layer"><img class="icon" src="/Frontend/img/icon-231.svg" alt="Icon" /></div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="avater-icon"></div>
             </div>
-            <img class="logo" src="img/logo-1@2x.png" alt="logo" />
-            <img class="arrow_back" src="img/arrow-back-4.svg" alt="arrow_back" />
+            <img class="logo" src="/Frontend/img/logo-1@2x.png" alt="logo" />
+            <img class="arrow_back" src="/Frontend/img/arrow-back-4.svg" alt="arrow_back" />
             <div class="overlap-group1">
               <div class="menu-fab">
                 <div class="menu"></div>
                 <div class="fab-elevation-override"></div>
               </div>
-              <img class="icon-2" src="img/icon-221.svg" alt="Icon" />
-              <img class="notifications" src="img/notifications-2.svg" alt="notifications" />
+              <img class="icon-2" src="/Frontend/img/icon-221.svg" alt="Icon" />
+              <img class="notifications" src="/Frontend/img/notifications-2.svg" alt="notifications" />
             </div>
           </div>
         </div>
         <div class="dashbored-1 dashbored-4">
-          <img class="icon-3" src="img/icon-19.png" alt="icon" />
+          <img class="icon-3" src="/Frontend/img/icon-19.png" alt="icon" />
           <div class="overlap-group3">
             <div class="dashbored-2 dashbored-4"></div>
-            <img class="icon-4" src="img/icon-20.svg" alt="icon" />
+            <img class="icon-4" src="/Frontend/img/icon-20.svg" alt="icon" />
             <div class="see-history-of-individuals">see history (of individuals)</div>
           </div>
         </div>
@@ -65,55 +65,55 @@
           </div>
           <div class="flex-col">
             <div class="overlap-group4">
-              <img class="x-axis" src="img/x-axis-grid.svg" alt="X-axis grid" />
-              <img class="x-axis-grid x-axis-2" src="img/x-axis-grid-1.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-1 x-axis-grid-9" src="img/x-axis-grid-2.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-2 x-axis-grid-9" src="img/x-axis-grid-3.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-3 x-axis-grid-9" src="img/x-axis-grid-4.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-4 x-axis-grid-9" src="img/x-axis-grid-5.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-5 x-axis-grid-9" src="img/x-axis-grid-6.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-6 x-axis-grid-9" src="img/x-axis-grid-7.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-7 x-axis-grid-9" src="img/x-axis-grid-8.svg" alt="X-axis grid" />
-              <img class="x-axis-grid-8 x-axis-grid-9" src="img/x-axis-grid-9.svg" alt="X-axis grid" />
-              <img class="x-axis-1 x-axis-2" src="img/y-axis-grid.svg" alt="Y-axis grid" />
-              <img class="y-axis-grid" src="img/y-axis-grid-1.svg" alt="Y-axis grid" />
-              <img class="y-axis-grid-1 y-axis-grid-5" src="img/y-axis-grid-2.svg" alt="Y-axis grid" />
-              <img class="y-axis-grid-2 y-axis-grid-5" src="img/y-axis-grid-3.svg" alt="Y-axis grid" />
-              <img class="y-axis-grid-3 y-axis-grid-5" src="img/y-axis-grid-4.svg" alt="Y-axis grid" />
-              <img class="y-axis-grid-4 y-axis-grid-5" src="img/y-axis-grid-5.svg" alt="Y-axis grid" />
-              <img class="x-axis-1 x-axis-2" src="img/y-axis-grid.svg" alt="X-axis" />
-              <img class="x-axis" src="img/x-axis-grid.svg" alt="Y-axis" />
-              <img class="line" src="img/line.svg" alt="Line" />
-              <img class="marker" src="img/marker.svg" alt="Marker" />
-              <img class="marker-1 marker-30" src="img/marker-1.svg" alt="Marker" />
-              <img class="marker-2 marker-30" src="img/marker-2.svg" alt="Marker" />
-              <img class="marker-3 marker-30" src="img/marker-3.svg" alt="Marker" />
-              <img class="marker-4 marker-30" src="img/marker-4.svg" alt="Marker" />
-              <img class="marker-5 marker-30" src="img/marker-5.svg" alt="Marker" />
-              <img class="marker-6 marker-30" src="img/marker-6.svg" alt="Marker" />
-              <img class="marker-7 marker-30" src="img/marker-7.svg" alt="Marker" />
-              <img class="marker-8 marker-30" src="img/marker-8.svg" alt="Marker" />
-              <img class="marker-9 marker-30" src="img/marker-9.svg" alt="Marker" />
-              <img class="marker-10 marker-30" src="img/marker-10.svg" alt="Marker" />
-              <img class="marker-11 marker-30" src="img/marker-11.svg" alt="Marker" />
-              <img class="marker-12 marker-30" src="img/marker-12.svg" alt="Marker" />
-              <img class="marker-13 marker-30" src="img/marker-13.svg" alt="Marker" />
-              <img class="marker-14 marker-30" src="img/marker-14.svg" alt="Marker" />
-              <img class="marker-15 marker-30" src="img/marker-15.svg" alt="Marker" />
-              <img class="marker-16 marker-30" src="img/marker-16.svg" alt="Marker" />
-              <img class="marker-17 marker-30" src="img/marker-17.svg" alt="Marker" />
-              <img class="marker-18 marker-30" src="img/marker-18.svg" alt="Marker" />
-              <img class="marker-19 marker-30" src="img/marker-19.svg" alt="Marker" />
-              <img class="marker-20 marker-30" src="img/marker-20.svg" alt="Marker" />
-              <img class="marker-21 marker-30" src="img/marker-21.svg" alt="Marker" />
-              <img class="marker-22 marker-30" src="img/marker-22.svg" alt="Marker" />
-              <img class="marker-23 marker-30" src="img/marker-23.svg" alt="Marker" />
-              <img class="marker-24 marker-30" src="img/marker-24.svg" alt="Marker" />
-              <img class="marker-25 marker-30" src="img/marker-25.svg" alt="Marker" />
-              <img class="marker-26 marker-30" src="img/marker-26.svg" alt="Marker" />
-              <img class="marker-27 marker-30" src="img/marker-27.svg" alt="Marker" />
-              <img class="marker-28 marker-30" src="img/marker-28.svg" alt="Marker" />
-              <img class="marker-29 marker-30" src="img/marker-29.svg" alt="Marker" />
+              <img class="x-axis" src="/Frontend/img/x-axis-grid.svg" alt="X-axis grid" />
+              <img class="x-axis-grid x-axis-2" src="/Frontend/img/x-axis-grid-1.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-1 x-axis-grid-9" src="/Frontend/img/x-axis-grid-2.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-2 x-axis-grid-9" src="/Frontend/img/x-axis-grid-3.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-3 x-axis-grid-9" src="/Frontend/img/x-axis-grid-4.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-4 x-axis-grid-9" src="/Frontend/img/x-axis-grid-5.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-5 x-axis-grid-9" src="/Frontend/img/x-axis-grid-6.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-6 x-axis-grid-9" src="/Frontend/img/x-axis-grid-7.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-7 x-axis-grid-9" src="/Frontend/img/x-axis-grid-8.svg" alt="X-axis grid" />
+              <img class="x-axis-grid-8 x-axis-grid-9" src="/Frontend/img/x-axis-grid-9.svg" alt="X-axis grid" />
+              <img class="x-axis-1 x-axis-2" src="/Frontend/img/y-axis-grid.svg" alt="Y-axis grid" />
+              <img class="y-axis-grid" src="/Frontend/img/y-axis-grid-1.svg" alt="Y-axis grid" />
+              <img class="y-axis-grid-1 y-axis-grid-5" src="/Frontend/img/y-axis-grid-2.svg" alt="Y-axis grid" />
+              <img class="y-axis-grid-2 y-axis-grid-5" src="/Frontend/img/y-axis-grid-3.svg" alt="Y-axis grid" />
+              <img class="y-axis-grid-3 y-axis-grid-5" src="/Frontend/img/y-axis-grid-4.svg" alt="Y-axis grid" />
+              <img class="y-axis-grid-4 y-axis-grid-5" src="/Frontend/img/y-axis-grid-5.svg" alt="Y-axis grid" />
+              <img class="x-axis-1 x-axis-2" src="/Frontend/img/y-axis-grid.svg" alt="X-axis" />
+              <img class="x-axis" src="/Frontend/img/x-axis-grid.svg" alt="Y-axis" />
+              <img class="line" src="/Frontend/img/line.svg" alt="Line" />
+              <img class="marker" src="/Frontend/img/marker.svg" alt="Marker" />
+              <img class="marker-1 marker-30" src="/Frontend/img/marker-1.svg" alt="Marker" />
+              <img class="marker-2 marker-30" src="/Frontend/img/marker-2.svg" alt="Marker" />
+              <img class="marker-3 marker-30" src="/Frontend/img/marker-3.svg" alt="Marker" />
+              <img class="marker-4 marker-30" src="/Frontend/img/marker-4.svg" alt="Marker" />
+              <img class="marker-5 marker-30" src="/Frontend/img/marker-5.svg" alt="Marker" />
+              <img class="marker-6 marker-30" src="/Frontend/img/marker-6.svg" alt="Marker" />
+              <img class="marker-7 marker-30" src="/Frontend/img/marker-7.svg" alt="Marker" />
+              <img class="marker-8 marker-30" src="/Frontend/img/marker-8.svg" alt="Marker" />
+              <img class="marker-9 marker-30" src="/Frontend/img/marker-9.svg" alt="Marker" />
+              <img class="marker-10 marker-30" src="/Frontend/img/marker-10.svg" alt="Marker" />
+              <img class="marker-11 marker-30" src="/Frontend/img/marker-11.svg" alt="Marker" />
+              <img class="marker-12 marker-30" src="/Frontend/img/marker-12.svg" alt="Marker" />
+              <img class="marker-13 marker-30" src="/Frontend/img/marker-13.svg" alt="Marker" />
+              <img class="marker-14 marker-30" src="/Frontend/img/marker-14.svg" alt="Marker" />
+              <img class="marker-15 marker-30" src="/Frontend/img/marker-15.svg" alt="Marker" />
+              <img class="marker-16 marker-30" src="/Frontend/img/marker-16.svg" alt="Marker" />
+              <img class="marker-17 marker-30" src="/Frontend/img/marker-17.svg" alt="Marker" />
+              <img class="marker-18 marker-30" src="/Frontend/img/marker-18.svg" alt="Marker" />
+              <img class="marker-19 marker-30" src="/Frontend/img/marker-19.svg" alt="Marker" />
+              <img class="marker-20 marker-30" src="/Frontend/img/marker-20.svg" alt="Marker" />
+              <img class="marker-21 marker-30" src="/Frontend/img/marker-21.svg" alt="Marker" />
+              <img class="marker-22 marker-30" src="/Frontend/img/marker-22.svg" alt="Marker" />
+              <img class="marker-23 marker-30" src="/Frontend/img/marker-23.svg" alt="Marker" />
+              <img class="marker-24 marker-30" src="/Frontend/img/marker-24.svg" alt="Marker" />
+              <img class="marker-25 marker-30" src="/Frontend/img/marker-25.svg" alt="Marker" />
+              <img class="marker-26 marker-30" src="/Frontend/img/marker-26.svg" alt="Marker" />
+              <img class="marker-27 marker-30" src="/Frontend/img/marker-27.svg" alt="Marker" />
+              <img class="marker-28 marker-30" src="/Frontend/img/marker-28.svg" alt="Marker" />
+              <img class="marker-29 marker-30" src="/Frontend/img/marker-29.svg" alt="Marker" />
             </div>
             <div class="address-container-1 roboto-normal-black-10px">
               <div class="address-1">1 Week</div>
@@ -134,19 +134,20 @@
             <div class="dashbored"></div>
             <div class="number inter-black-black-24px">9</div>
             <div class="students inter-extra-light-black-16px">Students</div>
-            <img class="gmail_groups" src="img/gmail-groups.svg" alt="gmail_groups" />
+            <img class="gmail_groups" src="/Frontend/img/gmail-groups.svg" alt="gmail_groups" />
           </div>
           <div class="overlap-group5">
             <div class="dashbored"></div>
             <div class="number-1 number-3 inter-black-black-24px">14</div>
             <div class="new-message inter-extra-light-black-16px">New Message</div>
-            <img class="mail" src="img/mail.svg" alt="mail" />
+            <img class="mail" src="/Frontend/img/mail.svg" alt="mail" />
           </div>
           <div class="overlap-group7">
             <div class="dashbored"></div>
             <h1 class="address-7 inter-black-black-24px">40 Hr</h1>
             <div class="weekly-hour inter-extra-light-black-16px">Weekly Hour</div>
-            <img class="circular-determinate-progress-indicator" src="img/circular-determinate-progress-indicator.svg"
+            <img class="circular-determinate-progress-indicator"
+              src="/Frontend/img/circular-determinate-progress-indicator.svg"
               alt="circular-determinate progress indicator" />
             <div class="number-2 number-3">23</div>
           </div>
@@ -154,17 +155,20 @@
         <div class="dashbored-3 dashbored-4"></div>
         <div class="see-more">see more</div>
         <p class="x10-27-calc-at-12pm-student-mike-k">10/ 27 Calc at 12pm, Student: Mike K</p>
-        <img class="x1020-math-1-at-230pm-student-zendaya-b" src="img/10-20-math-1-at-2-30pm--student--zendaya-b.png"
+        <img class="x1020-math-1-at-230pm-student-zendaya-b"
+          src="/Frontend/img/10-20-math-1-at-2-30pm--student--zendaya-b.png"
           alt="10/20 Math 1 at 2:30pm, Student: Zendaya B" />
-        <img class="corner-down-right" src="img/corner-down-right.svg" alt="Corner down-right" />
-        <img class="corner-down-right-1 corner-down-right-3" src="img/corner-down-right.svg" alt="Corner down-right" />
+        <img class="corner-down-right" src="/Frontend/img/corner-down-right.svg" alt="Corner down-right" />
+        <img class="corner-down-right-1 corner-down-right-3" src="/Frontend/img/corner-down-right.svg"
+          alt="Corner down-right" />
         <p class="x111-algebra-at-9pm-student-bee-v">11/1 Algebra at 9pm, Student: Bee V</p>
-        <img class="corner-down-right-2 corner-down-right-3" src="img/corner-down-right.svg" alt="Corner down-right" />
-        <img class="rectangle-175" src="img/rectangle-175.svg" alt="Rectangle 175" />
+        <img class="corner-down-right-2 corner-down-right-3" src="/Frontend/img/corner-down-right.svg"
+          alt="Corner down-right" />
+        <img class="rectangle-175" src="/Frontend/img/rectangle-175.svg" alt="Rectangle 175" />
         <div class="upcoming-task">Upcoming Task</div>
         <div class="completed-tasks">completed tasks</div>
-        <img class="icon-5" src="img/icon-17.svg" alt="icon" />
-        <img class="icon-6" src="img/icon-18.svg" alt="icon" />
+        <img class="icon-5" src="/Frontend/img/icon-17.svg" alt="icon" />
+        <img class="icon-6" src="/Frontend/img/icon-18.svg" alt="icon" />
       </div>
     </div>
   </div>
