Fully done with login and registration validation

--- a/Frontend/log-in.html
+++ b/Frontend/log-in.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <!--<meta name=description content="This site was generated with Anima. www.animaapp.com"/>-->
-  <!-- <link rel="shortcut icon" type=image/png href="https://animaproject.s3.amazonaws.com/home/favicon.png" /> -->
-  <meta name="viewport" content="width=1465, maximum-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
   <meta name="og:type" content="website" />
   <meta name="twitter:card" content="photo" />
   <link rel="stylesheet" type="text/css" href="/Frontend/css/log-in.css" />
   <link rel="stylesheet" type="text/css" href="/Frontend/css/styleguide.css" />
   <link rel="stylesheet" type="text/css" href="/Frontend/css/globals.css" />
+  <title>Log In</title>
 </head>
 
 <body style="margin: 0">
@@ -42,7 +41,7 @@
             <input type="password" id="password" name="password" placeholder="Password" required />
             <input type="hidden" id="user_type" name="user_type" />
             <button type="submit">Login</button>
-          </form>
+            <div id="login-message"></div>
         </div>
         <div class="dashbored"></div>
         <img class="logo" src="/Frontend/img/logo-11@2x.png" alt="logo" />
