Broken Image Fix

--- a/www/index.html
+++ b/www/index.html
@@ -11,16 +11,16 @@
       <div class="div">
         <div class="overlap">
           <div class="overlap-group">
-            <img class="rectangle" src="/img/rectangle-190.png" />
-            <img class="mail" src="/img/mail@2x.png" />
-            <img class="map-pin" src="/img/map.png" />
-            <img class="phone" src="/img/phone.png" />
+            <img class="rectangle" src="img/rectangle-190.png" />
+            <img class="mail" src="img/mail@2x.png" />
+            <img class="map-pin" src="img/map.png" />
+            <img class="phone" src="img/phone.png" />
             <p class="contact-us-at">
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact
               Us At<br /><br />(777)-666-888<br /><br />308 Negra Arroyo Lane<br />Albuquerque , NM 87104
               <br /><br />nexgentutors@gmail.com
             </p>
-            <img class="image" src="/img/image.png" />
+            <img class="image" src="img/image.png" />
             <p class="together-we-can-make">Together, we can make learning<br />a rewarding experience</p>
           </div>
           <div class="div-wrapper">
