--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -1,120 +1,111 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/globals.css" />
-    <link rel="stylesheet" href="css/registerstyleguide.css" />
-    <link rel="stylesheet" href="css/registerstyle.css" />
-  </head>
-  <body>
-    <div class="registration-page">
-      <div class="div">
-        <div class="register-form">
-          <div class="overlap-group">
-            <div class="registertbeforeopen">
-              <img class="vector" src="https://c.animaapp.com/GL9EDvPf/img/vector-1@2x.png" />
-              <div class="whiteframe"></div>
-              <div class="text-wrapper">Register as Tutor</div>
-            </div>
-            <div class="registersbeforeopen">
-              <img class="vector" src="https://c.animaapp.com/GL9EDvPf/img/vector-1@2x.png" />
-              <div class="whiteframe"></div>
-              <div class="text-wrapper">Register as Student</div>
-            </div>
-            <div class="registers">
-              <div class="div-2">
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/Frontend/css/globals.css" />
+  <link rel="stylesheet" href="/Frontend/css/registerstyleguide.css" />
+  <link rel="stylesheet" href="/Frontend/css/registerstyle.css" />
+  <title>Register</title>
+</head>
+
+<body>
+  <div class="registration-page">
+    <div class="div">
+      <div class="register-form">
+        <div class="overlap">
+          <div class="registertbeforeopen" onclick="showRegisterForm('tutor')">
+            <img class="vector" src="https://c.animaapp.com/GL9EDvPf/img/vector-1@2x.png" />
+            <div class="frame"></div>
+            <div class="text-wrapper">Register as Tutor</div>
+          </div>
+          <div class="registersbeforeopen" onclick="showRegisterForm('student')">
+            <img class="vector" src="https://c.animaapp.com/GL9EDvPf/img/vector-1@2x.png" />
+            <div class="frame"></div>
+            <div class="text-wrapper">Register as Student</div>
+          </div>
+          <div class="registers" id="register-form-student" style="display: none;">
+            <div class="overlap-group">
+              <div class="frame-2">
                 <div class="text-wrapper-2">Register as Student</div>
                 <img class="img" src="https://c.animaapp.com/GL9EDvPf/img/vector-1@2x.png" />
               </div>
-              <div class="fieldframe">
-                <div class="div-3">
-                  <div class="text-wrapper-3">First Name:</div>
-                  <div class="input">
-                    <div class="enter-here"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <input class="last-name" placeholder="Last Name:" type="text" />
-                <div class="div-4">
-                  <div class="enter-here-wrapper">
-                    <div class="div-wrapper"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <div class="div-3">
-                  <div class="text-wrapper-3">Username:</div>
-                  <div class="input-2">
-                    <div class="enter-here-2"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <div class="div-3">
-                  <div class="text-wrapper-3">Email/Phone Number:</div>
-                  <div class="input-2">
-                    <div class="enter-here-2"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <div class="div-3">
-                  <div class="text-wrapper-3">Password:</div>
-                  <div class="input-2">
-                    <div class="enter-here-2"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <button class="buttonfield">
-                  <button class="button"><div class="text-wrapper-5">Register</div></button>
-                </button>
-              </div>
+              <div class="frame-3" id="studentregisterclose"></div>
             </div>
-            <div class="registert">
-              <div class="div-2">
+            <form class="item" id="register-form-student-form" method="POST" action="Register.php">
+              <div class="input-field">
+                <div class="text-wrapper-3">Email/Username:</div>
+                <div class="input">
+                  <input type="text" id="student-email" name="email" class="enter-here" placeholder="Student ID"
+                    required>
+                </div>
+              </div>
+              <div class="input-field-2">
+                <div class="text-wrapper-3">Password:</div>
+                <div class="enter-here-wrapper">
+                  <input type="password" id="student-password" name="password" class="enter-here"
+                    placeholder="Student Password" required>
+                </div>
+              </div>
+              <input type="hidden" id="student_user_type" name="user_type" value="student" />
+              <div class="frame-4">
+                <div class="signin-button"><button type="submit" class="signin-text" name="action"
+                    value="registerStudent">Register</button></div>
+                <div class="text-link">
+                  <div class="text-link-2">Forgot password?</div>
+                </div>
+                <img class="google" src="https://c.animaapp.com/GL9EDvPf/img/google-1@2x.png" />
+              </div>
+              <div id="register-message-student"></div>
+            </form>
+          </div>
+          <div class="registers" id="register-form-tutor" style="display: none;">
+            <div class="overlap-group">
+              <div class="frame-2">
                 <div class="text-wrapper-2">Register as Tutor</div>
                 <img class="img" src="https://c.animaapp.com/GL9EDvPf/img/vector-1@2x.png" />
               </div>
-              <div class="item">
-                <div class="div-3">
-                  <div class="text-wrapper-3">First Name:</div>
-                  <div class="input-2">
-                    <div class="enter-here-2"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <div class="div-4">
-                  <div class="text-wrapper-3">Last Name:</div>
-                  <div class="input-3">
-                    <div class="div-wrapper"><div class="text-wrapper-4">Enter here</div></div>
-                    <div class="enter-here-3"></div>
-                  </div>
-                </div>
-                <div class="div-3">
-                  <div class="text-wrapper-3">Username:</div>
-                  <div class="input-2">
-                    <div class="enter-here-2"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <div class="div-3">
-                  <div class="text-wrapper-3">Email/Phone Number:</div>
-                  <div class="input-2">
-                    <div class="enter-here-2"><div class="text-wrapper-4">Enter here</div></div>
-                  </div>
-                </div>
-                <div class="div-3">
-                  <div class="text-wrapper-3">Password:</div>
-                  <div class="input-4">
-                    <div class="enter-here-2"><div class="text-wrapper-4">Enter here</div></div>
-                    <div class="enter-here-4"></div>
-                  </div>
-                </div>
-                <button class="framebutton">
-                  <button class="button"><div class="text-wrapper-5">Register</div></button>
-                </button>
-              </div>
+              <div class="frame-3" id="tutorregisterclose"></div>
             </div>
+            <form class="item" id="register-form-tutor-form" method="POST" action="Register.php">
+              <div class="input-field">
+                <div class="text-wrapper-3">Email/Username:</div>
+                <div class="input">
+                  <input type="text" id="tutor-email" name="email" class="enter-here" placeholder="Tutor ID" required>
+                </div>
+              </div>
+              <div class="input-field-2">
+                <div class="text-wrapper-3">Password:</div>
+                <div class="enter-here-wrapper">
+                  <input type="password" id="tutor-password" name="password" class="enter-here"
+                    placeholder="Tutor Password" required>
+                </div>
+              </div>
+              <input type="hidden" id="tutor_user_type" name="user_type" value="tutor" />
+              <div class="frame-4">
+                <div class="signin-button"><button type="submit" class="signin-text" name="action"
+                    value="registerTutor">Register</button></div>
+                <div class="text-link">
+                  <div class="text-link-2">Forgot password?</div>
+                </div>
+                <img class="google" src="https://c.animaapp.com/GL9EDvPf/img/google-1@2x.png" />
+              </div>
+              <div id="register-message-tutor"></div>
+            </form>
           </div>
-          <img class="divideline" src="https://c.animaapp.com/GL9EDvPf/img/divideline.png" />
-          <div class="registertextinform">Register</div>
         </div>
-        <div class="overlap">
-          <div class="purpletop"></div>
-          <img class="arrow-back" src="https://c.animaapp.com/GL9EDvPf/img/arrow-back@2x.png" />
-          <img class="logo" src="https://c.animaapp.com/GL9EDvPf/img/logo@2x.png" />
+        <img class="divideline" src="https://c.animaapp.com/GL9EDvPf/img/line-26.png" />
+        <div class="registertextinform">Register</div>
+      </div>
+      <div class="overlap">
+        <div class="purpletop">
         </div>
+        <img class="logo" src="https://c.animaapp.com/GL9EDvPf/img/logo@2x.png" />
       </div>
     </div>
-  </body>
+  </div>
+  <script src="/Frontend/js/login-register.js"></script>
+</body>
+
 </html>
