--- a/Frontend/test-login-register.html
+++ b/Frontend/test-login-register.html
@@ -1,204 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Login and Register</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-
-        h2 {
-            text-align: center;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        input,
-        select {
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        button {
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        .message {
-            margin-top: 10px;
-            text-align: center;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Frontend/css/globals.css" />
+    <link rel="stylesheet" href="/Frontend/css/styleguide.css" />
+    <link rel="stylesheet" href="/Frontend/css/style.css" />
+    <title>Log In</title>
 </head>
 
 <body>
-    <div class="container">
-        <h2>Login</h2>
-        <form id="login-form">
-            <input type="email" id="login-email" name="email" placeholder="Email" required />
-            <input type="password" id="login-password" name="password" placeholder="Password" required />
-            <select id="login-user-type" name="user_type" required>
-                <option value="student">Student</option>
-                <option value="tutor">Tutor</option>
-            </select>
-            <button type="submit">Login</button>
-        </form>
-        <div class="message" id="login-message"></div>
+    <div class="log-in">
+        <div class="div">
+            <div class="form-log-in">
+                <div class="overlap">
+                    <div class="logint" onclick="toggleLogint()">
+                        <img class="vector" src="https://c.animaapp.com/XDwzz78J/img/vector-3@2x.png" />
+                        <div class="frame"></div>
+                        <div class="text-wrapper">Sign in as Tutor</div>
+                    </div>
+                    <div class="loginbeforest" onclick="toggleLogin()">
+                        <img class="vector" src="https://c.animaapp.com/XDwzz78J/img/vector-3@2x.png" />
+                        <div class="frame"></div>
+                        <div class="text-wrapper">Sign in as Student</div>
+                    </div>
+                    <div class="loginst" id="loginst" style="display: none;">
+                        <div class="overlap-group">
+                            <div class="frame-2">
+                                <div class="text-wrapper-2">Sign in as Student</div>
+                                <img class="img" src="https://c.animaapp.com/XDwzz78J/img/vector-3@2x.png" />
+                            </div>
+                            <div class="frame-3" id="studentlogginclose"></div>
+                        </div>
+                        <form class="item" id="login-form" method="POST" action="Login.php">
+                            <div class="input-field">
+                                <div class="text-wrapper-3">Email/Username:</div>
+                                <div class="input">
+                                    <input type="text" id="email" name="email" class="enter-here"
+                                        placeholder="Student ID" required>
+                                </div>
+                            </div>
+                            <div class="input-field-2">
+                                <div class="text-wrapper-3">Password:</div>
+                                <div class="enter-here-wrapper">
+                                    <input type="password" id="password" name="password" class="enter-here"
+                                        placeholder="Student Password" required>
+                                </div>
+                            </div>
+                            <input type="hidden" id="user_type" name="user_type" />
+                            <div class="frame-4">
+                                <div class="signin-button"><button type="submit" class="signin-text" name="action"
+                                        value="loginStudent">Sign in</button></div>
+                                <div class="text-link">
+                                    <div class="text-link-2">Forgot password?</div>
+                                </div>
+                                <img class="face" src="https://c.animaapp.com/XDwzz78J/img/face-1@2x.png" />
+                            </div>
+                            <div id="login-message"></div>
+                        </form>
+                    </div>
+                    <div class="logaftert" id="logaftert" style="display: none;">
+                        <div class="overlap-group">
+                            <div class="frame-2">
+                                <div class="text-wrapper-2">Sign in as Tutor</div>
+                                <img class="img" src="https://c.animaapp.com/XDwzz78J/img/vector-3@2x.png" />
+                            </div>
+                            <div class="frame-3" id="teacherlogclose"></div>
+                        </div>
+                        <form class="item" id="register-form" method="POST" action="Register.php">
+                            <div class="input-field">
+                                <div class="text-wrapper-3">Email/Username:</div>
+                                <div class="input">
+                                    <input type="text" id="register-email" name="email" class="enter-here"
+                                        placeholder="Tutor ID" required>
+                                </div>
+                            </div>
+                            <div class="input-field-2">
+                                <div class="text-wrapper-3">Password:</div>
+                                <div class="enter-here-wrapper">
+                                    <input type="password" id="register-password" name="password" class="enter-here"
+                                        placeholder="Tutor Password" required>
+                                </div>
+                            </div>
+                            <select id="register-user-type" name="user_type" required>
+                                <option value="student">Student</option>
+                                <option value="tutor">Tutor</option>
+                            </select>
+                            <div class="frame-4">
+                                <div class="signin-button"><button type="submit" class="signin-text" name="action"
+                                        value="registerTutor">Register</button></div>
+                                <div class="text-link">
+                                    <div class="text-link-2">Forgot password?</div>
+                                </div>
+                                <img class="face" src="https://c.animaapp.com/XDwzz78J/img/face-1@2x.png" />
+                            </div>
+                            <div id="register-message"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="container" style="margin-top: 20px;">
-        <h2>Register</h2>
-        <form id="register-form">
-            <input type="email" id="register-email" name="email" placeholder="Email" required />
-            <input type="password" id="register-password" name="password" placeholder="Password" required />
-            <select id="register-user-type" name="user_type" required>
-                <option value="student">Student</option>
-                <option value="tutor">Tutor</option>
-            </select>
-            <button type="submit">Register</button>
-        </form>
-        <div class="message" id="register-message"></div>
-    </div>
-
-    <script>
-        document.getElementById('login-form').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent the default form submission
-
-            // Get form data
-            const email = document.getElementById('login-email').value;
-            const password = document.getElementById('login-password').value;
-            const userType = document.getElementById('login-user-type').value;
-
-            // Create an object to hold the form data
-            const formData = {
-                email: email,
-                password: password,
-                user_type: userType,
-                action: 'login'
-            };
-
-            console.log('Request Data: ', formData); // Log the form data
-
-            // Send the form data to the server
-            fetch('/Backend/includes/combined_login_register.php', { // Corrected path
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            })
-                .then(response => response.text()) // Get raw response text
-                .then(text => {
-                    console.log('Raw Response Text:', text);
-                    try {
-                        return JSON.parse(text); // Parse JSON
-                    } catch (error) {
-                        console.error('Error parsing JSON:', error);
-                        throw new Error('Invalid JSON response');
-                    }
-                })
-                .then(data => {
-                    console.log('Parsed Response Data:', data); // Print the response data to the console
-                    const messageElement = document.getElementById('login-message');
-                    if (data.success) {
-                        messageElement.textContent = 'Login successful!';
-                        messageElement.style.color = 'green';
-                    } else {
-                        messageElement.textContent = 'Login failed: ' + data.message;
-                        messageElement.style.color = 'red';
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    const messageElement = document.getElementById('login-message');
-                    messageElement.textContent = 'An error occurred. Please try again.';
-                    messageElement.style.color = 'red';
-                });
-        });
-
-        document.getElementById('register-form').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent the default form submission
-
-            // Get form data
-            const email = document.getElementById('register-email').value;
-            const password = document.getElementById('register-password').value;
-            const userType = document.getElementById('register-user-type').value;
-
-            // Create an object to hold the form data
-            const formData = {
-                email: email,
-                password: password,
-                user_type: userType,
-                action: 'register'
-            };
-
-            // Send the form data to the server
-            fetch('/Backend/includes/combined_login_register.php', { // Corrected path
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            })
-                .then(response => response.text()) // Get raw response text
-                .then(text => {
-                    console.log(text); // Log raw response text
-                    try {
-                        return JSON.parse(text); // Parse JSON
-                    } catch (error) {
-                        console.error('Error parsing JSON:', error);
-                        throw new Error('Invalid JSON response');
-                    }
-                })
-                .then(data => {
-                    console.log(data); // Print the response data to the console
-                    const messageElement = document.getElementById('register-message');
-                    if (data.success) {
-                        messageElement.textContent = 'Registration successful!';
-                        messageElement.style.color = 'green';
-                    } else {
-                        messageElement.textContent = 'Registration failed: ' + data.message;
-                        messageElement.style.color = 'red';
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    const messageElement = document.getElementById('register-message');
-                    messageElement.textContent = 'An error occurred. Please try again.';
-                    messageElement.style.color = 'red';
-                });
-        });
-    </script>
+    <script src="/Frontend/js/log-in.js"></script>
 </body>
 
 </html>
