update click on studentdash

--- a/www/studentdash.html
+++ b/www/studentdash.html
@@ -20,7 +20,9 @@
             <div class="label">Home</div>
           </div>
           <div class="nav-item">
-            <img class="schedule" src="https://c.animaapp.com/GJjFwk6y/img/schedule@2x.png" />
+            <button class="menu-button-FAQ" onclick="window.location.href='performance.php'">
+              <img class="schedule" src="https://c.animaapp.com/GJjFwk6y/img/schedule@2x.png" alt="Schedule">
+            </button>          
             <div class="label">Performance</div>
           </div>
           <div class="nav-item">
