--- a/Frontend/Login.html
+++ b/Frontend/Login.html
@@ -66,7 +66,7 @@
               </div>
               <div class="frame-3" id="teacherlogclose"></div>
             </div>
-            <form class="item" id="register-form" method="POST" action="/Frontend/tutor-dashboard.html">
+            <form class="item" id="login-form" method="POST" action="/Frontend/tutor-dashboard.html">
               <div class="input-field">
                 <div class="text-wrapper-3">Email/Username:</div>
                 <div class="input">
@@ -83,7 +83,7 @@
               </div>
               <div class="frame-4">
                 <div class="signin-button"><button type="submit" class="signin-text" name="action"
-                    value="registerTutor">Register</button></div>
+                    value="registerTutor">Sign In</button></div>
                 <div class="text-link">
                   <div class="text-link-2">Forgot password?</div>
                 </div>
